# binary-hierarchy-in-path

./: Cargo.toml  README.md
src/: main.rs  path_utils.rs
