[package]
name = "path-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
winsafe = { version = "0.0.25", features = ["gui", "user", "kernel"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_Com"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.51"
